<resources>
    <string name="app_name">admin</string>
    <string name="upload">Upload</string>
    <string name="enter_owner_name">Enter Owner Name</string>
    <string name="enter_vechicle_brand">Enter Vechicle Brand</string>
    <string name="enter_vechicle_rto">Enter Vechicle RTO</string>
    <string name="save">Save</string>
    <string name="enter_vechicle_number">Enter Vechicle Number</string>
    <string name="update">Update</string>
    <string name="enter_vehicle_number">Enter vehicle number</string>
    <string name="e">Enter owner name</string>
    <string name="enter_vehicle_brand">Enter vehicle brand</string>
    <string name="enter_vehicle_rto">Enter vehicle RTO</string>
    <string name="update2">Update</string>
    <string name="delete">Delete</string>
    <string name="enter_vehicle_number2">Enter vehicle number</string>
    <string name="delete2">Delete</string>
</resources>