<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/upload_admin"
    tools:context=".UploadActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="300dp" /> <!-- Menambahkan ruang kosong di atas untuk menggeser text box ke bawah -->

    <EditText
        android:id="@+id/UploadOwnerName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/blue_border"
        android:gravity="start|center_vertical"
        android:hint="@string/enter_owner_name"
        android:padding="16dp"
        android:textColor="@color/darkblue"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/UploadVechicleBrand"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_border"
        android:hint="@string/enter_vechicle_brand"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:textSize="15sp"
        android:textColor="@color/darkblue"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/UploadVechicleRTO"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_border"
        android:hint="@string/enter_vechicle_rto"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:textSize="15sp"
        android:textColor="@color/darkblue"/>

    <EditText
        android:id="@+id/UploadVechicleNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/blue_border"
        android:gravity="start|center_vertical"
        android:hint="@string/enter_vechicle_number"
        android:padding="16dp"
        android:textColor="@color/darkblue"
        android:textSize="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/SaveButton"
        android:text="@string/save"
        android:backgroundTint="@color/darkblue"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:cornerRadius="20dp"/>

</LinearLayout>
